example/SyntaxError/call_rule_error.pione
Rule ABC
  input '*.a'
  output '*.b'
Flow
  rule "abc"
End
